fixed birthday not showing correct day

--- a/client/src/app/components/settings/profile-settings/profile-settings.component.css
+++ b/client/src/app/components/settings/profile-settings/profile-settings.component.css
@@ -41,3 +41,8 @@ form{
 .dropdown-ng{
     width: 48%;
 }
+
+select{
+    padding: 10px;
+    font-size: 16px;
+}
